--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-# Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-api-key-here
+# Azure OpenAI Configuration - GPT-4o (for Medical Q&A)
+AZURE_OPENAI_ENDPOINT=https://your-gpt4o-resource-name.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-gpt4o-api-key-here
 AZURE_OPENAI_API_VERSION=2024-02-01
+
+# Azure OpenAI Configuration - GPT-4o-mini (for User Info Collection)
+AZURE_OPENAI_MINI_ENDPOINT=https://your-gpt4o-mini-resource-name.openai.azure.com/
+AZURE_OPENAI_MINI_API_KEY=your-gpt4o-mini-api-key-here
+AZURE_OPENAI_MINI_API_VERSION=2024-02-01
 
 # Model Configuration
 GPT_4O_DEPLOYMENT_NAME=gpt-4o
@@ -26,8 +31,8 @@ STREAMLIT_SERVER_ADDRESS=localhost
 DATA_FOLDER=user_specific_data
 
 # Language Configuration
-DEFAULT_LANGUAGE=hebrew
-SUPPORTED_LANGUAGES=hebrew,english
+DEFAULT_LANGUAGE=he
+SUPPORTED_LANGUAGES=he,en
 
 # Logging Configuration
 LOG_FILE=logs/chatbot.log
